# MisalignmentGame

./: README.md  pyproject.toml  run_sim.py  run_sim_flet.py  test_gui.py
agents/: agent.py
model_calling/: DeepSeek.py  Llama.py  OpenAI.py
policies/: aligned_policy.py  deceptive_policy.py  deceptive_random_policy.py  paperclip_policy.py  policy.py
src/: agents_tutorial.py  leaderboard_db.py  main.py  simulate_interactions.py  simulation_app.py  tutorial.py
src/agents/: adversarial_agent.py  agent.py
src/databases/: interactions_db.py  leaderboard_db.py
src/game/: agents_tutorial.py  leaderboard.py  simulation_app.py
src/goal_generators/: goal_generator.py  malicious_goal_generator.py  random_goal_generator.py  realistic_goal_generator.py
src/model_calling/: Gemini.py  LLM.py
src/policies/: adversarial_policy.py  aligned_policy.py  deceptive_policy.py  deceptive_random_policy.py  misaligned_random_policy.py  paperclip_policy.py  policy.py
src/simulation_analysis/: analyse_results.py
src/ui/: size_aware_control.py
