[tool.poetry]
name = "thats-not-my-ai"
version = "0.1.0"
description = ""
authors = ["Ella <ella.bettison@xapien.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-genai = "^1.12.1"
flet = "^0.27.6"
asyncpg = "^0.30.0"
tqdm = "^4.67.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
